# fraudDetection

./: .gitignore  feature_engineering.py  index.html  main.py  pyproject.toml  render.yaml  requirements.txt  schemas.py  test.py
model/: decision_threshold.pkl  feature_columns.pkl  fraud_rf_model.pkl
