[project]
name = "predictive-transaction-intelligence-for-bfsi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.2",
    "joblib>=1.5.3",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "uvicorn[standard]>=0.51.0",
    "xgboost>=3.3.0",
]
